modified multichart view

--- a/frontend/style/custom.css
+++ b/frontend/style/custom.css
@@ -10,8 +10,32 @@ body {
     background-position: right 0px bottom 0px;
     color: #ffffff;
     text-shadow: 1px 1px 1px blue;
+    padding-top: 36px;
+    padding-bottom: 36px;
+    margin-bottom: 5px;
 }
 
 .weather-icon {
     width: 60px;
+}
+
+.pagination {
+    margin: 0 0;
+}
+
+.pagination li {
+    font-size: 0.8em;
+    text-align: center;
+}
+
+.daily-weather {
+    text-align: center;
+}
+
+.min-temp {
+    color: #888888;
+}
+
+nav li p {
+    margin: 0 0 2px;
 }
