Execute code analyzing

--- a/frontend/style/custom.css
+++ b/frontend/style/custom.css
@@ -15,7 +15,7 @@ body {
     margin-bottom: 5px;
 }
 
-/* Multychart tabs */
+/* MultiChart tabs */
 
 .navbar-inverse {
     box-shadow: 0 3px 10px rgba(0,0,0,0.5);
@@ -37,7 +37,7 @@ body {
     text-align: center;
 }
 
-/* end Multychart tabs */
+/* end multiChart tabs */
 
 /* Not found page */
 
